--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           </ul>
         </div>
       </section>
-      <div class="container">
-        <section class="main-advantages">
+      <section class="main-advantages">
+        <div class="container">
           <h2 style="display: none">Nuestras ventajas</h2>
           <ul class="ul-advantages">
             <li class="li-advantages">
@@ -109,8 +109,8 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
       <section class="main-what">
         <h2>What do we do</h2>
         <div class="container">
@@ -218,6 +218,7 @@
             </ul>
           </address>
         </section>
+        <section class="icon-footer"></section>
       </div>
     </footer>
   </body>
